--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,69 @@ description = "A command-line tool that generates and maintains boilerplate code
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Code Generators",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Operating System :: OS Independent",
 ]
 license = "MIT"
+dependencies = []
+
+keywords = ["cli", "pipeline", "data"]
+
 
 [tool.hatch.version]
 source = "vcs"
 
 [tool.hatch.build.hooks.vcs]
 version-file = "src/pypeline_cli/_version.py"
+
+[project.optional-dependencies]
+dev = [
+    "build==1.3.0",
+    "twine==6.2.0",
+    "ruff==0.14.9",
+    "pre-commit==4.5.1",
+    "pytest==9.0.2",
+    "pytest-cov==7.0.0",
+    "pytest-asyncio==1.3.0"
+]
+
+[project.scripts]
+pypeline = "pypeline_cli.main:cli"
+
+[tool.ruff]
+line-length = 88
+target-version = "py39"
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+docstring-code-format = true
+skip-magic-trailing-comma = false
+line-ending = "auto"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",                    # Verbose
+    "--strict-markers",      # Enforce marker registration
+    "--cov=pypeline_cli",    # Coverage for your package
+    "--cov-report=term-missing",  # Show missing lines
+    "--cov-report=html",     # Generate HTML report
+]
+markers = [
+    "slow: marks tests as slow",
+    "integration: marks tests as integration tests",
+]
