--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ classifiers = [
 ]
 license = "MIT"
 dependencies = [
-    "click==8.3.1"
+    "click==8.3.1",
+    "tomli_w==1.2.0",
+    "tomli==2.3.0"
 ]
 
 keywords = ["cli", "pipeline", "data"]
@@ -47,7 +49,7 @@ dev = [
     "pre-commit==4.5.1",
     "pytest==9.0.2",
     "pytest-cov==7.0.0",
-    "pytest-asyncio==1.3.0"
+    "pytest-asyncio==1.3.0",
 ]
 
 [project.scripts]
