Added dependencies support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 license = "MIT"
 dependencies = [
     "click==8.3.1",
-    "tomli_w==1.2.0",
+    "tomli-w==1.2.0",
     "tomli==2.3.0"
 ]
 
