--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,9 @@ classifiers = [
 ]
 license = "MIT"
 dependencies = [
-    "click==8.3.1",
-    "tomli-w==1.2.0",
-    "tomli==2.3.0"
+    "click>=8.0.0",
+    "tomli>=2.0.0; python_version < '3.11'",
+    "tomli-w>=1.0.0"
 ]
 
 keywords = ["cli", "pipeline", "data"]
