--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 ]
 license = "MIT"
 dependencies = [
-    "click>=8.0.0",
+    "click",
     "tomli>=2.0.0; python_version < '3.11'",
     "tomli-w>=1.0.0"
 ]
