--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,11 +18,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history for hatchling versioning
+          fetch-tags: true  # Explicitly fetch tags
       
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+      
+      - name: Debug version info
+        run: |
+          git describe --tags --long
+          git tag --sort=-v:refname | head -5
       
       - name: Install build dependencies
         run: |
