altered table cache to be top level instead of processor level

--- a/src/pypeline_cli/templates/init/table_cache.py.template
+++ b/src/pypeline_cli/templates/init/table_cache.py.template
@@ -1,4 +1,3 @@
-# pipelines/queries/table_cache.py
 """
 Module: pipelines/queries/table_cache.py
 
@@ -68,13 +67,31 @@ class TableCache:
         Example:
             >>> cache = TableCache()
             >>> tables = cache.get_tables(["CCW_PTA_FACT", "CCW_ALL_CLM_PRFL"])
+            >>> pta_fact = tables["CCW_PTA_FACT"]
+            >>> clm_prfl = tables["CCW_ALL_CLM_PRFL"]
         """
         return {key: self.get_table(key) for key in table_keys}
     
     def _load_table(self, table_key: str) -> None:
-        """Load a table and add it to the cache."""
+        """
+        Load a table and add it to the cache.
+        
+        Args:
+            table_key: Key from TABLE_CONFIGS
+            
+        Example:
+            >>> cache = TableCache()
+            >>> cache._load_table("CCW_PTA_FACT")  # Internal use only
+        """
         if table_key not in TABLE_CONFIGS:
             raise ValueError(f"Table key '{table_key}' not found in TABLE_CONFIGS")
+        
+        if TABLE_CONFIGS[table_key].is_output:
+            self.logger.info(
+                message=f"Skipping {table_key} since it is an output table",
+                context=MODULE_NAME
+            )
+            return
         
         table_config = TABLE_CONFIGS[table_key]
         table_name = table_config.generate_table_name()
@@ -110,9 +127,15 @@ class TableCache:
         
         Args:
             table_keys: List of keys from TABLE_CONFIGS to preload
+            
+        Example:
+            >>> cache = TableCache()
+            >>> cache.preload_tables(["CCW_PTA_FACT", "CCW_ALL_CLM_PRFL", "CCW_MBR_DIM"])
+            >>> cache.preloud_tables(k for k, config in TABLE_CONFIGS.items() if not config.is_output)
         """
+        pre_loaded_cache_length = len(self._cache)
         self.logger.info(
-            message=f"Preloading {len(table_keys)} tables into cache",
+            message=f"Attempting to load {len(table_keys)} tables into cache",
             context=MODULE_NAME
         )
         
@@ -121,12 +144,19 @@ class TableCache:
                 self._load_table(table_key)
         
         self.logger.info(
-            message=f"Preloaded {len(table_keys)} tables successfully",
+            message=f"Preloaded {len(self._cache) - pre_loaded_cache_length} tables successfully",
             context=MODULE_NAME
         )
     
     def clear_cache(self) -> None:
-        """Clear all cached tables."""
+        """
+        Clear all cached tables.
+        
+        Example:
+            >>> cache = TableCache()
+            >>> cache.preload_tables(["CCW_PTA_FACT", "CCW_ALL_CLM_PRFL"])
+            >>> cache.clear_cache()  # Removes all cached tables
+        """
         self.logger.info(
             message="Clearing table cache",
             context=MODULE_NAME,
@@ -135,7 +165,19 @@ class TableCache:
         self._cache.clear()
     
     def get_cache_info(self) -> Dict[str, int | list[str]]:
-        """Get information about the cache state."""
+        """
+        Get information about the cache state.
+        
+        Returns:
+            Dictionary with cache statistics and table keys
+            
+        Example:
+            >>> cache = TableCache()
+            >>> cache.preload_tables(["CCW_PTA_FACT", "CCW_ALL_CLM_PRFL"])
+            >>> info = cache.get_cache_info()
+            >>> print(info)
+            {'cached_tables': 2, 'table_keys': ['CCW_PTA_FACT', 'CCW_ALL_CLM_PRFL']}
+        """
         return {
             "cached_tables": len(self._cache),
             "table_keys": list(self._cache.keys())
