--- a/src/pypeline_cli/templates/processors/processor.py.template
+++ b/src/pypeline_cli/templates/processors/processor.py.template
@@ -53,7 +53,7 @@ class $class_name:
         self.cache: Dict[str, DataFrame] = cache
 
         self.logger.info(
-            message=f"Initialized $class_name",
+            message="Initialized $class_name",
             context=MODULE_NAME
         )
 
